fix: 미디어쿼리 모바일 파트의 white-space w: wrap을 normal로 변경

--- a/css/mediaQuery/mediaQuery.css
+++ b/css/mediaQuery/mediaQuery.css
@@ -27,7 +27,7 @@
 /* Mobile */
 @media all and (min-width: 375px) and (max-width: 767px) {
   * {
-    white-space: wrap;
+    white-space: normal;
   }
 
   .br-none-mobile {
